--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,3 @@
-*
-
-!.gitignore
-!LICENSE
-!README.md
-!README_zh-cn.md
-
-!pyproject.toml
-
-!train_RCCNet.py
-!train_RotNet.py
-!train_RotNetR.py
-!test_RCCNet.py
-!test_RotNet.py
-!test_RotNetR.py
-!quant_RotNetR.py
-!test_captcha.py
-!server.py
-
-!src
-!src/**
-
 __pycache__
+models
+log
